--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../img/images\ \(1\).jpeg);
+    background-image: url(../img/download.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
