--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,10 @@ h1{
     align-items: center;
     border-radius: 8%;
 }
+.form {
+    width:60%;
+        height: 100px;
+        background-color: #ffffff;
+        border-radius: 20px;
+        box-shadow: 2px 2px 12px rgba(0, 0, 0, 2);
+}
