--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,700;1,800&display=swap');
+
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-image: url(../img/download.jpeg);
     background-repeat: no-repeat;
@@ -6,14 +14,26 @@ body{
     padding-bottom: 0px;
  
 }
+h1{
+    font-family: 'EB Garamond', serif;
+    color: crimson;
+}
+h3 {
+    text-align: center;
+    font-family: 'EB Garamond', serif;
+}
 p{
     text-align: center;
     padding: 100px;
     font-size: 40px;
+    font-family: 'EB Garamond', serif;
 }
 .img{
     width: 40%;
     height: 80%;
+    margin-top: 10%;
+    align-items: center;
+
 }
 h1{
     font-style: italic;
@@ -36,4 +56,9 @@ h1{
         background-color: #ffffff;
         border-radius: 20px;
         box-shadow: 2px 2px 12px rgba(0, 0, 0, 2);
+}
+.items{
+    width: 50%;
+    height: 100px;
+   align-items: center;
 }
